Small correction of Hun lang

--- a/language/Hungarian/strings.po
+++ b/language/Hungarian/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: XBMC Skins\n"
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2021-02-09 18:00+ZONE\n"
+"PO-Revision-Date: 2021-02-16 09:00+ZONE\n"
 "Last-Translator: frodo19\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/xbmc-skins/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -628,7 +628,7 @@ msgstr "Klasszikus stílus"
 
 msgctxt "#31246"
 msgid "Show icon media flags"
-msgstr "Média ikont mutat (szöveg)"
+msgstr "Média ikont mutat"
 
 msgctxt "#31247"
 msgid "Home menu style"
@@ -1772,7 +1772,7 @@ msgstr "Elmosás beállítások"
 
 msgctxt "#37757"
 msgid "Media-Flags"
-msgstr "Média ikonok"
+msgstr "Média ikonok (szöveg)"
 
 msgctxt "#37758"
 msgid "Enable grid"
